# TextTacToe

./: .gitignore  README.md  TextTacToe.py  pyproject.toml
src/texttactoe/: TextTacToe.py  texttactoe.py
texttactoe/: __init__.py  __main__.py  app.py  player.py  player_panel.py  tttboard.py
