[tool.poetry]
name = "texttactoe"
version = "0.1.0"
description = "A TUI to play tictactoe."
keywords = ["tictactoe","game","textual"]
readme = "README.md"
authors = ["Jose Medina <jose.amedina96@gmail.com>"]
license = "MIT"
repository = "https://github.com/JoseAndresMedina/TextTacToe"

[tool.poetry.dependencies]
python = "^3.8"
textual = "^0.1.18"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
texttactoe = "texttactoe.__main__:run"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"